<resources>

    <!-- <string name="app_name">Personal Droid Library</string> -->
    <string name="app_name">Personal Droid Library</string>
    <string name="reticencias">&#8230;</string>
    <string name="hello_world">Hello world!</string>
    <string name="botao_ok">OK</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_pdl">@string/app_name</string>
    <string name="botao_busca">Busca</string>
    <string name="botao_proxima">Proxima</string>
    <string name="botao_anterior">Anterior</string>
    <string name="rotulo_usuario">Usuário</string>
    <string name="rotulo_matricula">Matrícula</string>
    <string name="rotulo_data_emissao">Data Emissão</string>
    <string name="botao_atualizar_extrato">Atualizar</string>
    <string name="rotulo_livros">Livros</string>
    <string name="title_activity_alarme">PDL Verificação</string>
    <string name="title_activity_login">PDL Login</string>
    <string name="rotulo_numero_carteira_biblioteca">Número Carteira Biblioteca</string>
    <string name="rotulo_senha">Senha</string>
    <string name="botao_login">Login</string>
    <string name="botao_sair">Sair</string>
    <string name="rotulo_aba_busca">Busca</string>
    <string name="rotulo_aba_extrato_renovacao">Extrato/Renovação</string>
    <string name="descricao_imagem_status_livro">Status do Livro</string>
    <string name="descricao_imagem_logo">Logo do PDL (Personal Droid Library)</string>

</resources>