<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aba_extrato"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp" >

    <TextView
        android:id="@+id/aba_extrato_rotulo_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/rotulo_usuario"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/aba_extrato_rotulo_matricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aba_extrato_rotulo_usuario"
        android:layout_below="@+id/aba_extrato_rotulo_usuario"
        android:layout_marginTop="15dp"
        android:text="@string/rotulo_matricula"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/aba_extrato_rotulo_data_emissao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aba_extrato_rotulo_matricula"
        android:layout_below="@+id/aba_extrato_rotulo_matricula"
        android:layout_marginTop="15dp"
        android:text="@string/rotulo_data_emissao"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/aba_extrato_campo_data_emissao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/aba_extrato_rotulo_data_emissao"
        android:layout_centerHorizontal="true"
        android:inputType="none"
        android:focusable="false"
        android:ems="10" />

    <EditText
        android:id="@+id/aba_extrato_campo_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/aba_extrato_rotulo_usuario"
        android:layout_alignLeft="@+id/aba_extrato_campo_data_emissao"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="none" />

    <EditText
        android:id="@+id/aba_extrato_campo_matricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/aba_extrato_rotulo_matricula"
        android:layout_alignLeft="@+id/aba_extrato_campo_usuario"
        android:inputType="none"
        android:focusable="false"
        android:ems="10" />

    <TextView
        android:id="@+id/aba_extrato_campo_livros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aba_extrato_rotulo_data_emissao"
        android:layout_below="@+id/aba_extrato_rotulo_data_emissao"
        android:layout_marginTop="16dp"
        android:text="@string/rotulo_livros"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/aba_extrato_lista_livros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/aba_extrato_botao_atualizar_extrato"
        android:layout_alignLeft="@+id/aba_extrato_campo_livros"
        android:layout_below="@+id/aba_extrato_campo_livros"
        android:layout_marginRight="10dp" >
    </ListView>

    <Button
        android:id="@+id/aba_extrato_botao_atualizar_extrato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/glyphicons_085_repeat"
        android:drawablePadding="3dp"
        android:onClick="atualizarExtrato"
        android:text="@string/botao_atualizar_extrato" />

</RelativeLayout>